--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "webapp",
+  "name": "thepalestink",
   "version": "1.0.0",
-  "description": "vuewepapp",
-  "author": "LXKing <849237567@qq.com>",
+  "description": "A Vue.js project",
+  "author": "Ajuan <zhigang.chen@owulia.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -10,7 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.3.3",
+    "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
@@ -33,19 +33,25 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "mint-ui": "^2.2.7",
+    "node-sass": "^4.5.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.3",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-loader": "^11.3.4",
+    "vue-style-loader": "^2.0.5",
+    "vue-template-compiler": "^2.2.6",
     "vuex": "^2.3.1",
-    "webpack": "^2.6.1",
+    "vux": "^2.2.1",
+    "vux-loader": "^1.0.58",
+    "webpack": "^2.3.3",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
